[package]
name = "rustnes"
version = "0.1.0"
authors = ["Shin Matsuda <syncbunny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
once_cell = "1.9.0"
regex = "1.5.5"

[dependencies.sdl2]
features = ["use_mac_framework","bundled","static-link"]
version = "0.34.2"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
